Landing page até Itens

--- a/HTML_CSS/Landing Page/index.html
+++ b/HTML_CSS/Landing Page/index.html
@@ -14,37 +14,142 @@
     <title>Landing Page</title>
 </head>
 
-<body >
+<body>
     <header>
         <aside class="menu white-bg">
-            <section class="main-content menu-content">
+            <div class="main-content menu-content">
                 <h1>
                     <a href="">LOGO</a>
                 </h1>
                 <nav>
                     <ul>
-                        <li><a href="#">INTRO</a></li>
-                        <li><a href="#">TOP3</a></li>
-                        <li><a href="#">GALLERY</a></li>
-                        <li><a href="#">WORK</a></li>
-                        <li><a href="#">CONTACT</a></li>
+                        <li><a href="#teste">Home</a></li>
+                        <li><a href="#bio">Bio</a></li>
+                        <li><a href="#itens">Itens</a></li>
+                        <li><a href="#galeria">Galeria</a></li>
+                        <li><a href="#contato">Contato</a></li>
                     </ul>
                 </nav>
-            </section>
+            </div>
         </aside>
-
     </header>
-    <main class="main-bg">
-        <section class="section">
-            <div class="main-content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime aspernatur est similique cupiditate
-                    accusantium dolore possimus, et hic fuga. Libero ducimus maiores ab neque. Iure perspiciatis soluta
-                    doloremque vitae suscipit?
-                </p>
+    <main>
+        <section id="teste" class=" intro main-bg section">
+            <div class="menu-spacing"></div>
+            <div class="main-content intro-content">
+                <div class="intro-text-content">
+                    <h2>E ele construiu uma casa torta</h2>
+                    <p>
+                        “… E Ele Construiu uma Casa Torta” (“… And He Built a Crooked House”) foi primeiro publicado na
+                        revista Astounding Science Fiction, em 1940. Depois, foi publicado no Brasil em duas antologias,
+                        “A Sonda do Tempo” (“Time Probe”), editado por Arthur C. Clarke, em 1966 e publicado mais tarde
+                        pela Editora Nova Fronteira, e “… Para Onde Vamos?” (“Where Do We Go From There”), editado por
+                        Isaac Asimov e publicado pela Editora Hemus, de 1979.
+                    </p>
+                </div>
+                <div class="intro-img">
+                    <img src="./assets/img/Hypercube.svg" alt="hypercubo Teseract">
+                </div>
+            </div>
             </div>
         </section>
-        <section class="section"></section>
-        <section class="section"></section>
+        <section id="bio" class=" bio white-bg section">
+            <div class="main-content bio-content">
+                <div class="bio-text-content">
+                    <h2>Robert Anson Heinlein: Biografia e obra</h2>
+                    <p>
+                        Robert Anson Heinlein, escritor de Ficção Científica americano, nasceu em 1907 e morreu em 1988,
+                        nos Estados Unidos. Escreveu 56 contos e 30 romances. Hoje, ainda hoje, seus livros vendem mais
+                        de cem mil cópias anualmente. No total, venderam, até os dias de hoje, 30 milhões de cópias nos
+                        E. U. A. e 100 milhões de cópias ao redor do mundo. Foi o único autor a conquistar quatro vezes
+                        o Prêmio Hugo de melhor romance, por suas obras “A Estela Oculta” (“Double Star”, de 1955),
+                        “Revolta na Lua” (“The Moon is a Harsh Mistress”, de 1967), “Um Estranho numa Terra Estranha”
+                        (“Stranger in a Strange Land”, de 1961) e “Tropas Estelares” (“Starship Troopers”, de 1959).
+                    </p>
+                    <p>
+                        “… E Ele Construiu uma Casa Torta” (“… And He Built a Crooked House”) foi primeiro publicado na
+                        revista Astounding Science Fiction, em 1940. Depois, foi publicado no Brasil em duas antologias,
+                        “A Sonda do Tempo” (“Time Probe”), editado por Arthur C. Clarke, em 1966 e publicado mais tarde
+                        pela Editora Nova Fronteira, e “… Para Onde Vamos?” (“Where Do We Go From There”), editado por
+                        Isaac Asimov e publicado pela Editora Hemus, de 1979. É um conto com lances cômicos e satíricos,
+                        abordando o tema da Quarta Dimensão, o tempo. O que é o tempo, afinal? É uma sensação? É uma
+                        equação matemática, traduzida para nós por meio de mecanismos de relojoaria? Na verdade,
+                        sentimos o tempo passar quando contamos uma sequência ininterrupta e pausada de acontecimentos.
+                        O bater do coração, o tiquetaquear de um relógio, a passagem dos dias para noites, a mudança de
+                        dígitos e ponteiros em relógios digitais e analógicos. Percebemos o passar do tempo, vendo as
+                        coisas mudarem de posição, ou percebendo a passagem de sons e sensações rítmicas.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section id="itens" class=" main-bg section pontos">
+            <div class="main-content pontos-content">
+                <h2>Itens importantes</h2>
+                <div class="grid-pontos">
+                    <article>
+                        <h3>Item</h3>
+                        <p>
+                            É também expressada por equações matemáticas. As equações de espaço, velocidade e aceleração
+                            que aprendemos no ensino fundamental trazem a variável t (tempo). A ideia de uma dilatação
+                            do tempo foi pensada pela primeira vez por Albert Einstein. Nos diz que, se aumentarmos
+                            muito nossa velocidade, quanto mais ela se aproxima do valor 300.000 km/s, ou a velocidade
+                            da luz, mais lento se torna o passar do tempo para o observador submetido a esse aumento de
+                            velocidade, até que, na velocidade da luz, o tempo torna-se imutável para ele, enquanto que
+                            no exterior, o Universo já terá envelhecido e morrido.
+                        </p>
+                    </article>
+                    <article>
+                        <h3>Item</h3>
+                        <p>
+                            O tempo, como quarta dimensão, pode ser visto como uma quarta coordenada. Se dissermos, o
+                            arquiteto Teal está podando sua roseira em sua propriedade na Avenida Lookout Mountain, no
+                            km 8775, dez quilômetros do centro de Los Angeles, no Estado da Califórnia, nos Estados
+                            Unidos da América, no planeta Terra, o terceiro planeta a orbitar a 150 milhões de
+                            quilômetros uma estrela típica chamada Sol, que se situa na Via Láctea, a 2,5 milhões de
+                            anos-luz da Galáxia de Andrômeda, este conjunto de informações estará incompleto. Deve-se
+                            dizer em que instante Teal está cortando as ervas daninhas de seu canteiro de rosas.
+                        </p>
+                    </article>
+                    <article>
+                        <h3>Item</h3>
+                        <p>
+                            Isso,
+                            as três coordenadas espaciais, mais a quarta coordenada temporal, nos dá o chamado
+                            continuuum de espaço-tempo. Na verdade, tanto as coordenadas espaciais como as temporais são
+                            a mesma coisa, visto que, matematicamente, pode-se trabalhar convertendo-se tempo em espaço
+                            e espaço em tempo.
+                            Isso, as três coordenadas espaciais, mais a quarta coordenada temporal, nos dá o chamado
+                            continuuum de espaço-tempo. Na verdade, tanto as coordenadas espaciais como as temporais são
+                            a mesma coisa, visto que, matematicamente, pode-se trabalhar convertendo-se tempo em espaço
+                            e espaço em tempo.
+
+                        </p>
+                    </article>
+
+                </div>
+            </div>
+        </section>
+        <section id="galeria" class="section white-bg">
+            <div class="main-content galeria-content">
+                <h2>Galeria</h2>
+                <div class="grid-galeria">
+                    <div class="grid-foto">Teste</div>
+                    <div class="grid-foto">Teste</div>
+                    <div class="grid-foto">Teste</div>
+                    <div class="grid-foto">Teste</div>
+                    <div class="grid-foto">Teste</div>
+                    <div class="grid-foto">Teste</div>
+                    <div class="grid-foto">Teste</div>
+                    <div class="grid-foto">Teste</div>
+                    <div class="grid-foto">Teste</div>
+                </div>
+            </div>
+        </section>
+        <section id="contato" class="section white-bg">
+            <div class="main-content galeria-content">
+                <h2>Contato</h2>
+            </div>
+        </section>
     </main>
     <footer>
 
